# OOP_Labs

./: variant.json
lab0.1/: BitString.h  main.cpp
lab0.2/: BitString.h  CMakeLists.txt  main.cpp
lab1/: CMakeLists.txt  figure.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  square.cpp  square.h  trapezoid.cpp  trapezoid.h
lab2/: CMakeLists.txt  TQueue.cpp  TQueue.h  TQueueItem.cpp  TQueueItem.h  main.cpp  point.cpp  square.cpp  square.h
lab3/: CMakeLists.txt  TQueue.cpp  TQueue.h  TQueueItem.cpp  TQueueItem.h  main.cpp
lab4/: CMakeLists.txt  TQueue.cpp  TQueue.h  TQueueItem.h  main.cpp  rectangle.cpp  rectangle.h  trapezoid.h
lab5/: CMakeLists.txt  TQueue.h
lab6/: CMakeLists.txt  TIterator.h  TLinkedList.h  TLinkedListItem.cpp  TLinkedListItem.h  TQueue.cpp  TQueue.h  TQueueItem.cpp  TQueueItem.h  figure.h  main.cpp  point.h  rectangle.cpp  rectangle.h
reports/: README.md  lab0.1.docx  lab1.docx  lab3.docx  lab4.docx  lab5.docx
reports/docx/: lab0.2.docx  lab2.docx  lab6.docx
